3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

common/utils.c: don't try to decay a non head object, this leads to abort() from remove_ob().
Nicolas Weeger 2007-06-04

Add Crossfire.Object.Skill property.
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 plugins/common/plugin_common.c: fix a crash when a NULL value.
Nicolas Weeger 2007-06-04

common/living.c: don't ignore exp gained in a skill you don't know yet.
Nicolas Weeger 2007-06-04

Fix wrong return values.
 types/book/book.c
 types/clock/clock.c
 types/power_crystal/power_crystal.c
 types/sign/sign.c
Nicolas Weeger 2007-06-03

types/shop_inventory/shop_inventory.c: fix documentation.
Nicolas Weeger 2007-06-03

Fix multipart altars not working correctly.
 types/altar/altar.c
 types/trigger_altar/trigger_altar.c
 types/trigger_pedestal/trigger_pedestal.c
Nicolas Weeger 2007-06-03

Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
 server/skills.c
Nicolas Weeger 2007-06-03

server/apply.c: wrong return value when handled by a plugin.
Nicolas Weeger 2007-06-03

Fix lamp-related issues.
 common/map.c: don't clear FLAG_APPLY for lamps, as it indicates on/off.
 server/apply.c: lamps don't change apply status when being 'unapplied'.
 types/lamp/lamp.c: lamps can only be (un)applied when in inventory. 
Nicolas Weeger 2007-06-02

common/object.c: simplify insert_ob_in_ob when merging. Correctly update the light.
Nicolas Weeger 2007-06-02

Move ob_apply logic for LAMP objects to the ob_method system.
 include/typesproto.h
 server/apply.c ob_types.c
 types/lamp/lamp.c
 types/legacy/apply.c
 types/ChangeLog Makefile.am
Nicolas Weeger 2007-06-02
